--- a/stylesheet/homeStyle.css
+++ b/stylesheet/homeStyle.css
@@ -1,3 +1,11 @@
+body {
+	font-family: 'Open Sans' sans-serif;
+}
+
+.data-display {
+	color: blue;
+}
+
 path.link {
   fill: none;
   stroke: #666;
